# whatspic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  setup-libtorch.sh  xmake.lua
foo/: CMakeLists.txt
model/: train.ipynb
src/: main.cpp
src/foo/: CMakeLists.txt
src/foo/src/: foo.cpp  foo.h
